--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "private": true,
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
+    "build": "nuxi build",
+    "dev": "nuxi dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
     "lint": "eslint --ext .js,.vue ."
   },
   "devDependencies": {
+    "@nuxt/types": "^2.15.8",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -18,7 +19,7 @@
     "eslint-plugin-nuxt": "^4.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.7.0",
-    "nuxt": "3.0.0-rc.12",
+    "nuxt": "^3.0.0",
     "postcss": "^8.4.19",
     "postcss-custom-properties": "^12.1.10",
     "prettier": "^2.7.1",
