--- a/package.json
+++ b/package.json
@@ -29,9 +29,13 @@
     "vite-plugin-mock": "^2.9.6"
   },
   "dependencies": {
+    "@pinia/nuxt": "^0.4.6",
     "eslint-plugin-tailwindcss": "^3.7.1",
     "mock.js": "^0.2.0",
     "mockjs": "^1.1.0",
+    "pinia": "^2.0.28",
+    "swiper": "^8.4.5",
+    "vue-awesome-swiper": "^5.0.1",
     "vue-tsc": "^1.0.9"
   }
 }
