--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.8",
+    "@nuxtjs/device": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.1.3",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.6",
+    "@yeger/vue-masonry-wall": "^3.4.2",
     "eslint-plugin-tailwindcss": "^3.7.1",
     "mock.js": "^0.2.0",
     "mockjs": "^1.1.0",
