--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-tailwindcss": "^3.7.1",
     "mock.js": "^0.2.0",
     "mockjs": "^1.1.0",
+    "path-browserify": "^1.0.1",
     "pinia": "^2.0.28",
     "swiper": "^8.4.5",
     "vue-awesome-swiper": "^5.0.1",
